[package]
name = "VMWareReboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
dotenv = "0.15.0"
